# Parallel

./: README.md  说明文档.txt
Based_on_ALEX/: CMakeLists.txt  code.sh  test_all.sh
Based_on_ALEX/src/benchmark/: .test_all.cpp.swp  main.cpp  test_all.cpp
Based_on_ALEX/src/core/: alex.h  alex_base.h  alex_nodes.h
Based_on_ALEX_origin_arm/: CMakeLists.txt  benchmark.sh  build.sh
Based_on_ALEX_origin_arm/src/benchmark/: main.cpp  test_all.cpp
Based_on_ALEX_origin_arm/src/core/: alex.h  alex_nodes.h
MPI_lab/: mpi-multi-threads.cpp  mpi-omp-simd-neon.cpp  mpi-omp-simd-x86.cpp  mpi-only.cpp  pthread.cpp  serial-simd-pthread-omp.cpp  serial.cpp
MPI_lab/jinshanyunx86/: bash-mpi-multi-threads.sh  bash-mpi-omp-x86.sh  bash-mpionly.sh  bash-serial.sh  mpi-multi-threads.sh  mpi-omp-simd-x86.cpp  mpi-omp-x86.sh  mpi-only.sh  pbs-mpi-omp-x86.sh  pbs-mpimultithreads.sh  pbs-mpionly.sh  pbs-serial.sh  serial.sh
MPI_lab/kunpengarm/: mpi-multi-threads.sh  mpi-omp-neon.sh  mpi-omp-simd-neon.cpp  mpi-only.sh  serial.sh
Pthread_NolockLookUp_test/: CMakeLists.txt
Pthread_NolockLookUp_test/src/benchmark/: test_all.cpp
Pthread_NolockLookUp_test/src/core/: alex.h  alex_nodes.h
lab1.1_cache优化_arm/: lab1_cache.cpp  lab1_com.cpp
lab1.1_cache优化_x86/: lab1_cache.cpp  lab1_com1.cpp
lab1.2_超标量_arm/: lab1_com2.cpp  lab1_com2_recursion.cpp  lab1_com2_unroll.cpp
lab1.2_超标量_x86/: lab1_com2.cpp  lab1_com2_recursion.cpp  lab1_unroll.cpp
lab1/lab1.1_cache优化_arm/: lab1_cache.cpp
lab1/lab1.1_cache优化_x86/: lab1_cache.cpp
lab1/lab1.2_超标量_arm/: lab1_com2_recursion.cpp
lab1/lab1.2_超标量_x86/: lab1_com2_recursion.cpp  lab1_unroll.cpp
my_work/: simd_test.cpp
my_work/lab2/: simd_test.cpp
my_work/实验三+期末--pthread/: pthread_test_v1.0  pthread_test_v1.0.cpp
my_work_test/: mpi-sort  mpi-sort.cpp  openmp-sort  openmp-sort.cpp  pthread-sort  pthread-sort.cpp  pthread_test_v1.0  pthread_test_v1.0.cpp  simd_test  simd_test.cpp  sort  sort.cpp
openMP_test/: omp_test  omp_test.cpp
